k8s/ai-chatbot-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-chatbot-service
  namespace: smart-health
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-chatbot-service
  template:
    metadata:
      labels:
        app: ai-chatbot-service
    spec:
      containers:
        - name: ai-chatbot-service
          image: smart-health-care-ai-chatbot-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5031
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 5031
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5031
            initialDelaySeconds: 20
            periodSeconds: 20
