k8s/patient-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
  namespace: smart-health
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
        - name: patient-service
          image: smart-health-care-patient-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5028
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 400m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 5028
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5028
            initialDelaySeconds: 20
            periodSeconds: 20
