k8s/admin-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
  namespace: smart-health
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
    spec:
      containers:
        - name: admin-service
          image: smart-health-care-admin-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5025
          readinessProbe:
            httpGet:
              path: /health
              port: 5025
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5025
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: smart-health
spec:
  selector:
    app: admin-service
  ports:
    - port: 5025
      targetPort: 5025
