k8s/ai-chatbot-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-chatbot-service
  namespace: smart-health
spec:
  selector:
    app: ai-chatbot-service
  ports:
    - port: 5031
      targetPort: 5031
