k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: smart-health
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: smart-health-care-api-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5026
          readinessProbe:
            httpGet:
              path: /health
              port: 5026
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5026
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: smart-health
spec:
  selector:
    app: api-gateway
  ports:
    - port: 5026
      targetPort: 5026
