k8s/appointment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  namespace: smart-health
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: smart-health-care-appointment-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5027
          readinessProbe:
            httpGet:
              path: /health
              port: 5027
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5027
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  namespace: smart-health
spec:
  selector:
    app: appointment-service
  ports:
    - port: 5027
      targetPort: 5027
