k8s/auth-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo
  namespace: smart-health
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: auth-mongo-storage
              mountPath: /data/db
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: auth-mongo-storage
          persistentVolumeClaim:
            claimName: auth-mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo
  namespace: smart-health
spec:
  selector:
    app: auth-mongo
  ports:
    - port: 27017
      targetPort: 27017
