k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: smart-health
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: smart-health-care-auth-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5024
          readinessProbe:
            httpGet:
              path: /health
              port: 5024
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5024
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: smart-health
spec:
  selector:
    app: auth-service
  ports:
    - port: 5024
      targetPort: 5024
