k8s/doctor-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-service
  namespace: smart-health
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor-service
  template:
    metadata:
      labels:
        app: doctor-service
    spec:
      containers:
        - name: doctor-service
          image: smart-health-care-doctor-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5029
          readinessProbe:
            httpGet:
              path: /health
              port: 5029
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5029
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: doctor-service
  namespace: smart-health
spec:
  selector:
    app: doctor-service
  ports:
    - port: 5029
      targetPort: 5029
