k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: smart-health
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: smart-health-care-notification-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5032
          readinessProbe:
            httpGet:
              path: /health
              port: 5032
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5032
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: smart-health
spec:
  selector:
    app: notification-service
  ports:
    - port: 5032
      targetPort: 5032
