k8s/patient-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
  namespace: smart-health
spec:
  selector:
    app: patient-service
  ports:
    - port: 5028
      targetPort: 5028
