k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: smart-health
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: smart-health-care-payment-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5034
          readinessProbe:
            httpGet:
              path: /health
              port: 5034
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5034
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: smart-health
spec:
  selector:
    app: payment-service
  ports:
    - port: 5034
      targetPort: 5034
